--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
 
 </head>
 <body>
+    <div id="circle" class="circle"></div>
+    
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -44,6 +46,7 @@
                                         <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                             Admin Panel
                                         </button>
+                                        <span class="hover-bar"></span>
                                         <ul class="dropdown-menu dropdown-menu-dark">
                                             <li><a class="dropdown-item">Products</a></li>
                                             <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Products Categories</a></li>
