--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -75,6 +75,7 @@
                         }
 
                     </ul>
+                    <a asp-area="Customer" asp-controller="Cart" asp-action="Index"><i class="bi bi-cart"></i></a>
                     <form asp-controller="Products" asp-action="Search" method="get" class="d-flex">
                         <div class="col-4 m-0 p-0">
                             <input type="text" class="form-control" name="serachString" aria-describedby="emailHelp">
