--- a/WebShop/Views/Shared/_LoginPartial.cshtml
+++ b/WebShop/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,8 @@
         {
             <li class="nav-item">
                 <a class="nav-link" id="cart-icon" asp-area="Customer" asp-controller="ShoppingCart" asp-action="Index">
-                    <i class="bi bi-cart"></i> <div class="cart-counter">@CartItemCounter</div>
+                    <i class="bi bi-cart"></i> 
+                    <div class="cart-counter">@CartItemCounter</div>
                 </a>
             </li>
         }
