--- a/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -1,1 +1,20 @@
-﻿<h1>Shopping Cart</h1>
+﻿@using WebShop.Models.Views
+@model ShoppingCartVM
+
+<div class="container">
+    <div class="row shadow">
+        <div class="col-12 text-center bg-secondary bg-gradient text-light">
+            <h1>Shopping Cart</h1>
+        </div>
+    </div>
+    <div class="row mt-2 justify-content-center align-items-center">
+        <div class="col-12 text-center">
+            @foreach(var product in Model.Products)
+            {
+                @product.Product.Name <br/>
+            }
+            TOTAL PRICE: @Model.TotalPrice
+            Total Quantity: @Model.TotalCountOfProducts
+        </div>
+    </div>
+</div>
