AddToCart - Corrected Increasing and decreasing the number of items in the cart Delete items from Cart

--- a/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using WebShop.Models.Views
+﻿@using System.Globalization
+@using WebShop.Models.Views
 @model ShoppingCartVM
 
 <div class="container">
@@ -7,14 +8,55 @@
             <h1>Shopping Cart</h1>
         </div>
     </div>
+    <div class="row mt-2">
+        <div class="col-4">
+            <a class="btn btn-dark" asp-area="Customer" asp-controller="Products" asp-action="Index" asp-route-categoryId="12">Continue shopping</a>
+        </div>
+    </div>
     <div class="row mt-2 justify-content-center align-items-center">
         <div class="col-12 text-center">
             @foreach(var product in Model.Products)
             {
-                @product.Product.Name <br/>
+            <div class="row mt-4 shadow justify-content-center">
+                <div class="col-3">
+                    <img class="card-img-top" src="~/img/@(product.Product.ImgPath)" alt="@product.Product.Name" style="height: 100px;">
+                </div>
+                <div class="col-2">
+                    @product.Product.Name
+                </div>
+                <div class="col-2">
+                    @product.Product.Price @product.Product.Currency
+                </div>
+                    <div class="col-1">
+                        @product.Count
+                    </div>
+                    <div class="col-2">
+                        @(product.Count * product.Product.Price) @product.Product.Currency
+                    </div>
+                <div class="col-1">
+                        <a class="btn btn-outline-success" asp-area="Customer" asp-controller="ShoppingCart" asp-action="IncrementProductInCart" asp-route-cartId="@product.Id">+</a>
+                        <a class="btn btn-outline-danger" asp-area="Customer" asp-controller="ShoppingCart" asp-action="DecrementProductInCart" asp-route-cartId="@product.Id">-</a>
+                </div>
+                    <div class="col-1">
+                        <a class="btn btn-outline-danger" asp-area="Customer" asp-controller="ShoppingCart" asp-action="RemoveProductFromCart" asp-route-cartId="@product.Id">
+                            <i class="bi bi-trash"></i>
+                        </a>
+                    </div>
+            </div>  
             }
-            TOTAL PRICE: @Model.TotalPrice
-            Total Quantity: @Model.TotalCountOfProducts
+            @if(Model.TotalCountOfProducts > 0)
+            {
+                <div class="card-footer mt-3">
+                    <strong>TOTAL PRICE:</strong> @Model.TotalPrice.ToString("C", CultureInfo.CreateSpecificCulture("en-US"))
+                    <strong>Total Quantity:</strong> @Model.TotalCountOfProducts
+                </div>
+            }
+            else
+            {
+                <div class="card-footer">
+                    Your cart is empty. Add any item to continue.
+                </div>
+            }
         </div>
     </div>
 </div>
