--- a/WebShop/Areas/Customer/Views/Products/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Products/Index.cshtml
@@ -23,7 +23,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="card h-100">
                             <a asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
-                            <img class="card-img-top" src="~/img/@(product.ImgPath)" alt="@product.Name" style="height: 200px;">
+                            <img class="card-img-top" src="img/@(product.ImgPath)" alt="@product.Name" style="height: 200px;">
                             </a>
                             <div class="card-body">
                                 
