--- a/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="col-12 text-center">
             @foreach(var product in Model.Products)
             {
-            <div class="row mt-4 shadow justify-content-center">
+            <div class="row mt-4 shadow justify-content-center align-content-center">
                 <div class="col-3">
                     <img class="card-img-top" src="~/img/@(product.Product.ImgPath)" alt="@product.Product.Name" style="height: 100px;">
                 </div>
@@ -50,8 +50,8 @@
                     <strong>TOTAL PRICE:</strong> @Model.OrderHeader.OrderTotal.ToString("C", CultureInfo.CreateSpecificCulture("en-US"))
                     <strong>Total Quantity:</strong> @Model.TotalCountOfProducts
                 </div>
-                <div class="row">
-                    <a class="btn btn-outline-primary" asp-asp-area="Customer" asp-controller="ShoppingCart" asp-action="Summary">Summary</a>
+                <div class="row justify-content-center">
+                    <a class="btn btn-outline-primary col-2" asp-asp-area="Customer" asp-controller="ShoppingCart" asp-action="Summary">Summary</a>
                 </div>
             }
             else
