--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                                             User Panel
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-dark">
-                                            <li><a class="dropdown-item">My Orders</a></li>
+                                            <li><a class="dropdown-item" asp-area="Customer" asp-controller="Order" asp-action="Index">My Orders</a></li>
                                         </ul>
                                     </li>
                                 </ul>
