--- a/WebShop/Views/Shared/_LoginPartial.cshtml
+++ b/WebShop/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@* @using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor *@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
@@ -15,7 +17,12 @@
             <li class="nav-item">
                 <a class="nav-link" id="cart-icon" asp-area="Customer" asp-controller="ShoppingCart" asp-action="Index">
                     <i class="bi bi-cart"></i> 
-                    <div class="cart-counter">@CartItemCounter</div>
+                    <div class="cart-counter">@CartItemCounter
+@*                     @if(HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionCart) != null)
+                    {
+                            <span>(@HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionCart))</span>
+                    } *@
+                    </div>
                 </a>
             </li>
         }
