--- a/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
@@ -92,10 +92,10 @@
                                 {
                                     <li class="list-group-item d-flex justify-content-between">
                                         <div>
-                                            <h6 class="my-0">@details.Product.Name</h6>
-                                            <small class="text-muted">Quantity: @details.Count</small>
+                                            @* <h6 class="my-0">@details.Product.Name</h6> *@
+                                            @* <small class="text-muted">Quantity: @details.Count</small> *@
                                         </div>
-                                        <span class="text-muted">@(details.Product.Price * details.Count) USD</span>
+                                        @* <span class="text-muted">@(details.Product.Price * details.Count) USD</span> *@
                                     </li>
                                 }
 
