--- a/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
@@ -88,8 +88,8 @@
                                 <span class="text-info">Order Summary:</span>
                             </h4>
                             <ul class="list-group mb-3">
-                                @foreach (var details in Model.Products)
-                                {
+                                @* @foreach (var details in Model.Products)
+                                { *@
                                     <li class="list-group-item d-flex justify-content-between">
                                         <div>
                                             @* <h6 class="my-0">@details.Product.Name</h6> *@
@@ -97,7 +97,7 @@
                                         </div>
                                         @* <span class="text-muted">@(details.Product.Price * details.Count) USD</span> *@
                                     </li>
-                                }
+                                @* } *@
 
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <small class="text-info">Total (USD)</small>
