--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using WebShop.Models.Views
+
 @{
     var categories = Context.Items["CategoryList"] as List<ProductCategory>;
 }
@@ -96,7 +97,8 @@
                             <button type="submit" class="btn btn-primary" style="margin-left: .5rem">Search</button>
                         </div>
                     </form>
-                    <partial name="_LoginPartial"/>
+                    @* <partial name="_LoginPartial"/> *@
+                    @await Html.PartialAsync("_LoginPartial", new LoginViewModel())
                 </div>
             </div>
         </nav>
