--- a/WebShop/Areas/Customer/Views/ShoppingCart/OrderConfirmation.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/OrderConfirmation.cshtml
@@ -4,5 +4,6 @@
     <div class="col-12 text-center">
         <h1 class="text-primary text-center"> Order Places Successfully</h1>
         Your Order Number is: @Model
+        <button class="btn" asp-controller="Home" asp-action="Index">Back to main Page</button>
     </div>
 </div>
