--- a/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
@@ -88,16 +88,16 @@
                                 <span class="text-info">Order Summary:</span>
                             </h4>
                             <ul class="list-group mb-3">
-                                @* @foreach (var details in Model.Products)
-                                { *@
+                                @foreach (var details in Model.Products.CartItems)
+                                {
                                     <li class="list-group-item d-flex justify-content-between">
                                         <div>
-                                            @* <h6 class="my-0">@details.Product.Name</h6> *@
-                                            @* <small class="text-muted">Quantity: @details.Count</small> *@
+                                            <h6 class="my-0">@details.Product.Name</h6>
+                                            <small class="text-muted">Quantity: @details.TotalQuantity</small>
                                         </div>
-                                        @* <span class="text-muted">@(details.Product.Price * details.Count) USD</span> *@
+                                        <span class="text-muted">@details.TotalAmmount USD</span>
                                     </li>
-                                @* } *@
+                                }
 
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <small class="text-info">Total (USD)</small>
