Fixed Back to main page after place order

--- a/WebShop/Areas/Customer/Views/ShoppingCart/OrderConfirmation.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/OrderConfirmation.cshtml
@@ -4,6 +4,7 @@
     <div class="col-12 text-center">
         <h1 class="text-primary text-center"> Order Places Successfully</h1>
         Your Order Number is: @Model
-        <button class="btn" asp-controller="Home" asp-action="Index">Back to main Page</button>
+        <br/>
+        <a class="btn btn-primary mt-5" asp-controller="Home" asp-action="Index">Back to main Page</a>
     </div>
 </div>
